# NixOS-boot-image

./: .gitignore  AGENTS.md  README.md  automated-pre-nixos-design-changelog.md  automated-pre-nixos-design.md  automated-pre-nixos-reqs.md  flake.nix  pyproject.toml  pytest.ini  requirements-dev.txt
bootimage/: __init__.py  planner.py
docs/: boot-process.md  design.md  task-queue.md  test-plan.md  time_limit_statement.md  vm-boot-image-test-log.md
modules/: pre-nixos.nix
notes/: 2025-11-10T005619Z-automatic-installation-pass1.md  2025-12-21T180526Z-plan.md  2025-12-21T214936Z-vm-migration.md  2025-12-21T220149Z-vm-split.md  2025-12-22T000712Z-vm-timings.md  2025-12-22T134320Z-vm-ledger.md  2025-12-22T135916Z-vm-timing-ledger-followup.md  2025-12-22T144232Z-vm-progress.md  2025-12-22T144931Z-vm-diagnostics.md  2025-12-23T004630Z-vm-run.md  2025-12-23T015937Z-vm-login-hardening.md  2025-12-23T023032Z-vm-run.md  2025-12-23T141135Z-vm-log-root.md  2025-12-24T003420Z-vm-run.md  2025-12-24T041541Z-vm-residue.md  2025-12-24T135700Z-vm-run.md  2025-12-24T215153Z-vm-fixture.md  2025-12-24T224853Z-additional-disk-sizing.md  2025-12-25T234715Z-vm-run.md  2025-12-26T000017Z-vm-run.md  2025-12-26T001704Z-vm-run.md  vm-run-ledger.jsonl
plans/: 2025-11-10T002347Z-automatic-nixos-installation-plan.md
pre_nixos/: __init__.py  apply.py  console.py  default_log_file_path.txt  install.py  inventory.py  logging_utils.py  network.py  partition.py  planner.py  pre_nixos.py  root_ed25519.pub  state.py  storage_cleanup.py  storage_detection.py  tui.py
scripts/: codex-maintenance.sh  (+7 more)
(+210 files in other folders)
