[project]
name = "pre-nixos"
dynamic = ["version"]
description = "Pre-NixOS setup tool"
authors = [{name = "Unknown"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["pre_nixos"]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "pre_nixos/VERSION"}

[tool.setuptools.package-data]
pre_nixos = ["root_key.pub", "VERSION", "scripts/announce-lan-ip.sh"]

[project.scripts]
pre-nixos = "pre_nixos.pre_nixos:main"
pre-nixos-detect-storage = "pre_nixos.storage_detection:main"
pre-nixos-tui = "pre_nixos.tui:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
